--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 </head>
 <body>
-    <div class="container-fluid px-0  shadow-sm" id="bg-div">
+    <div class="container-fluid px-0  shadow-sm" id="bg-div fixed-top">
         <div class="row justify-content-center">
             <div class=" col-lg-9col-lg-12">
                 <div class="card card0">
