--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 <script  type="text/javascript" src="./js/index.js"></script>  
 
 </head>
+<style>
+    .modal {
+        overflow-y: auto;
+    }
+    </style>
 <body>
     <div class="container-fluid px-0  shadow-sm" id="bg-div fixed-top">
         <div class="row justify-content-center">
