--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
     </style>
 <body>
-    <div class="container-fluid px-0  shadow-sm" id="bg-div fixed-top">
+    <div class="container-fluid px-0  shadow-sm" id="bg-div fixed-bottom">
         <div class="row justify-content-center">
             <div class=" col-lg-9col-lg-12">
                 <div class="card card0">
